# FuFuAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/corpus/: companion.json  deep_night.json  leaving.json
examples/: quickstart.py
fufu_agent/: __init__.py  agent.py  config.py  events.py  models.py
fufu_agent/context/: __init__.py  digest.py  manager.py
fufu_agent/core/: __init__.py  personality_engine.py  scheduler.py  state_machine.py
fufu_agent/llm/: __init__.py  adapter.py  corpus.py  presets.py  prompts.py
fufu_agent/storage/: __init__.py  file_store.py
